# TenBagger

./: .env.example  .gitignore  .gtmproject.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  README_CN.md  babel.cfg  config.py  docker-compose.yml  main.py
.github/workflows/: auto-changelog.yml  auto-release.yml  ci-tests.yml  commit_message_check.yml  pr-diff-review.yml  secrets-scanner.yml
agents/: base.py  dynamic_position.py  ma_trend.py  trend.py
api/Trade/: models.py  pydantic_models.py  routers.py
api/core/: i18n.py  i18n_scanner.py
backend/: config.py  main.py  pyproject.toml  requirements.txt
backend/db/: database.py
backend/models/: schemas.py
backend/routers/: strategies.py  trading.py
backend/strategies/: __init__.py  bollinger_strategy.py  ma_strategy.py  macd_strategy.py  rsi_strategy.py
backend/tests/: conftest.py  test_bollinger_strategy.py  test_data_fetcher.py  test_ma_strategy.py  test_macd_strategy.py  test_rsi_strategy.py  test_strategies_api.py  test_trading_api.py
backend/utils/: data_fetcher.py
data/: base_model.py  data_fetcher.py  data_manager.py  downloader.py  fetcher.py  import_json_model.py  models.py  stock_pool.json
docs/: ROADMAP.md
engine/: broker_sim.py  trading_engine.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
locales/: messages.pot
risk/: manager.py
test/: test.py
ui/: streamlit_app.py
utils/: __init__.py  db.py  get_stock_code.py  helpers.py
(+9 files in other folders)
